support emscripten build, make the behavior deterministic regardless of memory allocation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(MINISAT_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/minisat)
 ExternalProject_Add(minisat_project
 	GIT_REPOSITORY https://github.com/semiexp/minisat
 	GIT_TAG custom_constraints
-	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${MINISAT_INSTALL_LOCATION} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${MINISAT_INSTALL_LOCATION} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
 )
 add_library(minisat_lib STATIC IMPORTED)
 set_property(TARGET minisat_lib PROPERTY IMPORTED_LOCATION ${MINISAT_INSTALL_LOCATION}/lib/libminisat.a)
