--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,21 @@ ExternalProject_Add(minisat_project
 	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${MINISAT_INSTALL_LOCATION} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
 )
 add_library(minisat_lib STATIC IMPORTED)
+add_dependencies(minisat_lib minisat_project)
 set_property(TARGET minisat_lib PROPERTY IMPORTED_LOCATION ${MINISAT_INSTALL_LOCATION}/lib/libminisat.a)
 
-add_subdirectory(src)
-add_subdirectory(test)
+# csugar_lib
+file(GLOB_RECURSE MAIN ${PROJECT_SOURCE_DIR}/src/common/*.cpp ${PROJECT_SOURCE_DIR}/src/conv/*.cpp ${PROJECT_SOURCE_DIR}/src/csp/*.cpp ${PROJECT_SOURCE_DIR}/src/icsp/*.cpp ${PROJECT_SOURCE_DIR}/src/sat/*.cpp)
+add_library(csugar_lib STATIC ${MAIN})
+target_include_directories(csugar_lib PUBLIC ${PROJECT_SOURCE_DIR}/include ${MINISAT_INSTALL_LOCATION}/include)
+add_dependencies(csugar_lib minisat_lib)
+target_link_libraries(csugar_lib minisat_lib)
+set_target_properties(csugar_lib PROPERTIES OUTPUT_NAME "csugar")
+
+# csugar executable
+add_executable(csugar src/main.cpp)
+target_include_directories(csugar PUBLIC ${PROJECT_SOURCE_DIR}/include ${MINISAT_INSTALL_LOCATION}/include)
+add_dependencies(csugar csugar_lib)
+target_link_libraries(csugar csugar_lib)
+
+# add_subdirectory(test)
